// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormattingBox renders a snapshot correctly when given json 1`] = `
.emotion-1 {
  text-align: left;
}

.emotion-0 {
  font-weight: bold;
  display: inline-block;
  margin-top: 0;
}

<div>
  
  
  <div
    id="formatted"
  >
    <h4
      className="emotion-0"
    >
      Formatted Data:
    </h4>
    <pre
      className="emotion-1"
      id="formattedText"
    >
      {
          "a": "apple",
          "b": 42,
          "c": false
      }
    </pre>
  </div>
  
</div>
`;

exports[`FormattingBox renders a snapshot correctly when given plain text 1`] = `
.emotion-1 {
  text-align: left;
}

.emotion-2 {
  white-space: pre-wrap;
}

.emotion-0 {
  font-weight: bold;
  display: inline-block;
  margin-top: 0;
}

<div>
  
  
  
  <div
    id="original"
  >
    <h4
      className="emotion-0"
    >
      Original Data:
    </h4>
    <pre
      className="emotion-1 emotion-2"
      id="originalText"
    >
      "a":"apple","b":42, "c":false
    </pre>
  </div>
</div>
`;

exports[`FormattingBox renders a snapshot correctly when given props 1`] = `
.emotion-1 {
  text-align: left;
}

.emotion-2 {
  white-space: pre-wrap;
}

.emotion-0 {
  font-weight: bold;
  display: inline-block;
  margin-top: 0;
}

<div>
  
  
  
  <div
    id="original"
  >
    <h4
      className="emotion-0"
    >
      Original Data:
    </h4>
    <pre
      className="emotion-1 emotion-2"
      id="originalText"
    >
      test
    </pre>
  </div>
</div>
`;

exports[`FormattingBox renders a snapshot correctly when given xml 1`] = `
.emotion-1 {
  text-align: left;
}

.emotion-0 {
  font-weight: bold;
  display: inline-block;
  margin-top: 0;
}

<div>
  
  
  <div
    id="formatted"
  >
    <h4
      className="emotion-0"
    >
      Formatted Data:
    </h4>
    <pre
      className="emotion-1"
      id="formattedText"
    >
      &lt;a&gt;
          This is a sample xml message
      &lt;/a&gt;
    </pre>
  </div>
  
</div>
`;
